BUGFIX: ods-deployments file repeats image in mono repository setup (#1023)
Co-authored-by: Martin Marcher <serverhorror@users.noreply.github.com>